EXTRA_DIST =			\
	acceleration.cdn	\
	basic_hopf.cdn		\
	bouncingball.cdn	\
	closedfixed.cdn		\
	coupling.cdn		\
	delayed.cdn		\
	matsuoka.cdn		\
	morphed.cdn		\
	multicoupling.cdn	\
	multipendulum.cdn	\
	nodes.cdn		\
	panto.cdn		\
	pogopoints.cdn		\
	selectors.cdn		\
	slip.cdn		\
	symbolic.cdn		\
	vanderpol.cdn